feat(finance): prevent duplicate refunds and show refund history in student fees